[tool.poetry]
name = "repl_python3_Autobot-Clipper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.3"
Flask = "^2.0.3"
Flask-Session = "^0.4.0"
google-api-python-client = "^2.38.0"
google-auth-oauthlib = "^0.5.0"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
